--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -4,6 +4,23 @@ html, body {
     font-family: var(--font-family-paragraph);
 }
 
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-family-header);
+    font-weight: 700;
+    color: var(--secondary-color4-hsl);
+}
+
+h1 {
+    font-size: 2.8em;
+}
+
+p {
+    font-size: 1em;
+    line-height: 1.2em;
+    margin-bottom: 1em;
+    color: var(--secondary-color2-hsl);
+}
+
 .main-container {
     margin: 10% 20%;
 }
