--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -11,13 +11,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2.8em;
+    font-size: 2.8rem;
 }
 
 p {
-    font-size: 1em;
-    line-height: 1.2em;
-    margin-bottom: 1em;
+    font-size: 1rem;
+    line-height: 1.2rem;
+    margin-bottom: 1rem;
     color: var(--secondary-color2-hsl);
 }
 
