--- a/client/src/components/ui/Chat.css
+++ b/client/src/components/ui/Chat.css
@@ -1,5 +1,6 @@
 .chat-section {
     background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 0.5rem;
+    padding: 1rem;
+    box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2);
 }
