--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -11,7 +11,15 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-    font-size: 2.8rem;
+    font-size: 3.2rem;
+}
+
+h2 {
+    font-size: 2.6rem;
+}
+
+h3 {
+    font-size: 2rem;
 }
 
 p {
