--- a/client/src/components/ui/Chat.css
+++ b/client/src/components/ui/Chat.css
@@ -3,3 +3,35 @@
     border-radius: 0.5rem;
     box-shadow: 0 0.4rem 0.8rem 0 rgba(0, 0, 0, 0.2);
 }
+
+.chat-section form {
+    position: relative;
+    line-height: 0;
+}
+
+.chat-section textarea {
+    width: 100%;
+    padding: 1.5rem 8rem 1.5rem 1.5rem;
+    background-color: var(--secondary-color9-hsl);
+    color: var(--secondary-color1-hsl);
+}
+
+.chat-section textarea::placeholder {
+    color: var(--secondary-color5-hsl);
+}
+
+.chat-section button {
+    background-color: var(--main-color4-hsl);
+    color: #fff;
+    font-family: var(--font-family-header);
+    font-weight: 700;
+    text-align: center;
+    width: 6rem;
+    height: 6rem;
+    padding: 1.5rem;
+    position: absolute;
+    right: 1rem;
+    bottom: 1rem;
+    border-radius: 3rem;
+    cursor: pointer;
+}
