--- a/client/src/components/ui/Chat.css
+++ b/client/src/components/ui/Chat.css
@@ -14,6 +14,8 @@
     padding: 1.5rem 8rem 1.5rem 1.5rem;
     background-color: var(--secondary-color9-hsl);
     color: var(--secondary-color1-hsl);
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
 }
 
 .chat-section textarea::placeholder {
@@ -28,10 +30,10 @@
     text-align: center;
     width: 6rem;
     height: 6rem;
-    padding: 1.5rem;
     position: absolute;
     right: 1rem;
-    bottom: 1rem;
+    bottom: 0.8rem;
     border-radius: 3rem;
+    border: 0.2rem #fff solid;
     cursor: pointer;
 }
